--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -13,7 +13,7 @@
     background-position: 98% 13%;
     border-radius: 2rem;
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     text-decoration: none;
   }
 }
